<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutUpcomingDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBackdropPath"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:alpha="0.3"
            android:background="@drawable/image_background_detail"
            android:contentDescription="@string/poster_to_movie"
            android:elevation="3dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:elevation="3dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPosterMovie"
            android:layout_width="183dp"
            android:layout_height="230dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:cropToPadding="true"
            android:elevation="3dp"
            android:outlineAmbientShadowColor="@color/colorLightGray"
            android:outlineSpotShadowColor="@color/colorBlack"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/ivBackdropPath"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/roundimageviewMedium"
            tools:srcCompat="@drawable/league_of_legends" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="8dp"
            android:elevation="3dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/title_to_movie"
            android:textColor="@color/colorLightGray"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/ivPosterMovie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivPosterMovie" />


        <TextView
            android:id="@+id/tvOriginal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:elevation="3dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/language_original"
            android:textColor="@color/colorLightMediumGray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvIdioma"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:elevation="3dp"
            android:fontFamily="@font/roboto_light"
            android:scaleType="centerCrop"
            android:text="@string/english"
            android:textColor="@color/colorLightMediumGray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvOriginal"
            app:layout_constraintStart_toEndOf="@id/tvOriginal"
            app:layout_constraintTop_toTopOf="@id/tvOriginal" />

        <TextView
            android:id="@+id/tvLancamento"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:elevation="3dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/release"
            android:textColor="@color/colorLightMediumGray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvOriginal" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:elevation="3dp"
            android:fontFamily="@font/roboto_light"
            android:text="00/00/0000"
            android:textColor="@color/colorLightMediumGray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvLancamento"
            app:layout_constraintStart_toEndOf="@id/tvLancamento"
            app:layout_constraintTop_toTopOf="@id/tvLancamento" />


        <ImageView
            android:id="@+id/ivVotoVector"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_star"
            android:elevation="4dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvLancamento" />


        <TextView
            android:id="@+id/tvVote"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="10.0"
            android:textColor="@color/colorGrayDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivVotoVector"
            app:layout_constraintStart_toEndOf="@+id/ivVotoVector"
            app:layout_constraintTop_toTopOf="@+id/ivVotoVector" />

        <TextView
            android:id="@+id/tvVoteDescription"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="/ 10 Média de Votos"
            android:textColor="@color/colorGrayDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvVote"
            app:layout_constraintStart_toEndOf="@+id/tvVote"
            app:layout_constraintTop_toTopOf="@+id/tvVote" />

        <TextView
            android:id="@+id/tvSinopse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/maginTopDetailTitle"
            android:elevation="3dp"
            android:textColor="@color/colorLightGray"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBackdropPath"
            tools:text="@string/strSinopse" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:fontFamily="@font/roboto_light"
            android:lineSpacingExtra="7sp"
            android:lines="3"
            android:textColor="@color/colorLightMediumGray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSinopse"
            app:layout_constraintTop_toBottomOf="@+id/tvSinopse"
            tools:text="@string/strOverview" />

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/maginTopDetailTitle"
            android:elevation="3dp"
            android:textColor="@color/colorLightGray"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@+id/tvSinopse"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview"
            tools:text="@string/strCommets" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewComments"
            android:layout_width="match_parent"
            android:layout_height="262dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:background="@drawable/shape_comments"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="@id/tvOverview"
            app:layout_constraintStart_toStartOf="@+id/tvOverview"
            app:layout_constraintTop_toBottomOf="@id/tvComments"
            tools:itemCount="5"
            tools:listitem="@layout/row_comments"
            tools:orientation="horizontal" />

        <TextView
            android:id="@+id/tvSimilares"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/maginTopDetailTitle"
            android:elevation="3dp"
            android:textColor="@color/colorLightGray"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/tvOverview"
            app:layout_constraintStart_toStartOf="@+id/recyclerViewComments"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewComments"
            tools:text="@string/strSimilares" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSimilar"
            android:layout_width="0dp"
            android:layout_height="248dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSimilares"
            tools:itemCount="10"
            tools:listitem="@layout/row_movie"
            tools:orientation="horizontal"
            tools:text="@string/strOverview"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>