<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutMovieList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryMedium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryMedium">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo_toplist"
            android:contentDescription="@string/strLogo_da_empresa"
            app:layout_constraintBottom_toTopOf="@id/tvNowPlaying"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/strNowPlaying"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNowPlaying"
            android:layout_width="0dp"
            android:layout_height="226dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNowPlaying"
            tools:itemCount="10"
            tools:listitem="@layout/row_movie"
            tools:orientation="horizontal"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTopRated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/strTopRated"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/rvNowPlaying" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopRated"
            android:layout_width="0dp"
            android:layout_height="226dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTopRated"
            tools:itemCount="10"
            tools:listitem="@layout/row_movie"
            tools:orientation="horizontal"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/strUpcoming"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/rvTopRated" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcoming"
            android:layout_width="0dp"
            android:layout_height="226dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpcoming"
            tools:itemCount="10"
            tools:listitem="@layout/row_movie"
            tools:orientation="horizontal"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tvPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/strPopular"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/rvUpcoming" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopular"
            android:layout_width="0dp"
            android:layout_height="226dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPopular"
            tools:itemCount="10"
            tools:listitem="@layout/row_movie"
            tools:orientation="horizontal"
            tools:visibility="visible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/marginEnd"
            app:layout_constraintTop_toBottomOf="@id/rvPopular"
            android:background="@android:color/transparent"/>

        <ProgressBar
            android:id="@+id/pbLoadingMoviesList"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:visibility="visible"
            android:layout_marginTop="355dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

        <ImageView
            android:id="@+id/ivImgError"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/ic_cell_tower"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/tvMsgErrorTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:padding="4dp"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/rvNowPlaying"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImgError"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/tvMsgErrorDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/marginEnd"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:padding="4dp"
            android:textColor="@color/colorGrayDark"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/rvNowPlaying"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMsgErrorTitle"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            style="@style/ButtonError"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/btnUpdate"
            android:textStyle="bold"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toBottomOf="@id/tvMsgErrorDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>